--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,11 +38,10 @@ jobs:
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@7e0881f8fe90b25e305bbf0309761e9314607e25
-        with:
-          cosign-release: 'v1.9.0'
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.1.1
+      - name: Check install!
+        run: cosign version
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
